sass/main.scss
$pink-200: #f5b2c8;
$pink-400: #e83e8c;
$blue-300: #9fd6fa;
$blue-500: #234;
$blue-800: #141f2b;
$grey-100: #ddd;
$grey-200: #fafafa;
$grey-300: #b9b9b9;
$grey-400: #555;
$grey-500: #111;

$anim-duration: 150ms;
$border-radius: 4px;

// Default font
$serif: "Book Antiqua", "Palatino Linotype", Palatino, "EB Garamond", serif;
// Button font
$sans-serif: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial,
  sans-serif, Apple Color Emoji, Segoe UI Emoji;
// Code font
$monospace: operator mono, sfmono-regular, Consolas, liberation mono, Menlo,
  Courier, monospace;

// Tiny reset
html,
body,
div,
form,
fieldset,
legend,
label,
h1,
h2 {
  margin: 0;
  padding: 0;
}

/* Style */

body {
  font-family: $serif;
  font-size: 1.2em;
  line-height: 1.58;
  color: $grey-500;
  border-top: 0.5em solid $pink-400;
}

.container {
  display: grid;
  grid-template-columns: auto 650px;
  justify-content: center;
  margin-top: 40px;
}

header {
  font-size: 0.8em;
  text-align: center;
  padding-top: 25px;
  width: 242px;
  position: sticky;
  top: 50px;
  height: 100vh;
}

.logo {
  width: 110px;
  margin: auto;
}

.logo_font {
  position: relative;
  width: 165px;
  height: 34px;
  margin: 0 auto;
}

.logo_font svg {
  position: absolute;
  top: 0;
  left: 0;
}

.bio {
  width: 190px;
  margin: auto;
  padding: 16px;
}

.bio span:after {
  content: " Writes about Rust, engineering culture, and socks.";
}

main {
  margin-top: 20px;
  margin-bottom: 50px;
  max-width: 650px;
  padding: 0px 30px;
}

main article {
  margin-bottom: 48px;
}

main img,
main video,
iframe {
  max-width: 100%;
  height: auto;
  border-radius: $border-radius;
}

.homepage h1 {
  font-size: 130%;
}

h1,
h2,
h3,
h4,
h5,
h6,
th,
td,
caption {
  font-weight: 400;
}

h1 {
  font-size: 1.87em;
  margin-bottom: 8px;
}

h2 {
  font-size: 1.2em;
}

main h2 {
  margin-top: 60px;
}

h3 {
  margin-top: 0px;
  font-style: italic;
}

header nav ul {
  display: inline-block;
  padding-left: 0px;
  margin-top: 0;
}

header nav li {
  list-style: none;
  display: inline;
}

.post-meta {
  font-style: italic;
  margin: 0px;
  font-size: 90%;
}

.homepage .post-meta {
  font-size: 80%;
}

.info {
  padding: 20px;
  margin: 30px 0;
  background: lightyellow;
  border: $border-radius solid peachpuff;
  border-radius: $border-radius;
}

.btn {
  color: $grey-500;
  background: $grey-200;
  display: inline-block;
  font-weight: 500;
  border-radius: $border-radius;
  border: 1px solid rgba(27, 31, 35, 0.15);
  text-decoration: none;
  box-shadow: 0 1px 0 rgba(27, 31, 35, 0.04),
    inset 0 1px 0 hsla(0, 0%, 100%, 0.25);
  transition: background-color 0.2s cubic-bezier(0.3, 0, 0.5, 1);
  font-family: $sans-serif;
  padding: 7px 16px;
  white-space: nowrap;
}

.btn-sm {
  padding: 7px 12px;
  font-size: 15px;
  line-height: 20px;
}

.btn-ico {
  margin-right: 4px;
  vertical-align: text-bottom;
  transition: transform 0.15s cubic-bezier(0.2, 0, 0.13, 2);
  transform: scale(1);
  color: $pink-400;
  fill: currentColor;
}

.btn:hover .btn-ico {
  transform: scale(1.1);
}

.searchicon {
  display: none;
}

pre,
code {
  font-family: $monospace;
}

pre {
  display: inline-grid;
  border-radius: $border-radius;
  width: 100%;
  padding: 10px;
}

code {
  font-size: 0.8em;
  padding: 2px;
}

pre > code {
  overflow-x: auto;
  display: inline-block;
}

:not(pre) > code {
  color: $grey-500;
  background: $grey-200;
  border-radius: $border-radius;
  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.125);
}

blockquote {
  border-left: $border-radius solid $blue-300;
  font-style: italic;
  margin: 4px 10px;
  padding: 0px 20px;
}

::selection {
  background: $grey-500;
  color: white;
}

a {
  color: $grey-500;
  text-decoration: underline;
  text-decoration-color: $pink-400;
  text-decoration-thickness: 2px;
  transition: text-decoration-color $anim-duration;
  text-underline-offset: 2px;
}

.homepage a.title {
  text-decoration-thickness: 3px;
  text-underline-offset: 4px;
}

.excerpt {
  margin: 10px 0;
}

.excerpt a {
  color: $pink-400;
  text-decoration: none;
}

table {
  width: 100%
}

table a {
  text-decoration: none;
}

a:hover {
  text-decoration-color: $grey-500;
}

.post-meta a:hover {
  color: $pink-400;
  text-decoration-color: $pink-400;
}

.icon {
  height: 24px;
  width: 24px;
  opacity: 0.4;
  float: left;
  margin: 5px;
  background-repeat: no-repeat;
  transition: opacity $anim-duration ease-in;
}

.icon:hover {
  opacity: 1;
}

figure {
  font-size: 0.9em;
  font-style: italic;
  margin: 40px 0 40px;
  padding: 0;
  text-indent: 0;

  img {
    width: 100%;
  }
}

figcaption {
  margin-top: 10px;
  text-align: center;
}

picture {
  text-align: center;
  display: block;
}

.post-links {
  list-style: none;
  padding: 0;
}

.comments {
  list-style: none;
  display: inline;
}

#teaser {
  background: $pink-400;
  color: $pink-200;
}

#teaser a,
footer a {
  color: white;
}

#teaser a::after {
  content: "\a0»";
}

footer {
  background: $blue-500;
  color: $grey-300;
}

#teaser,
footer {
  display: flex;
  justify-content: center;
}

#teaser .body,
footer .body {
  max-width: 800px;
  margin: 40px auto;
  padding: 20px;
}

.field {
  padding: 10px;
  font-size: 0.8em;
  border: none;
  border: 1px solid $grey-300;
}

.autocomplete {
  position: relative;
  display: inline-block;
}

.autocomplete input {
  border: 1px solid $grey-100;
  padding: 10px 20px;
  border-radius: 20px;
  width: 150px;
  font-size: 0.9em;
  box-shadow: 0 1px 0px rgba(255, 255, 255, 0.25);
}

input[type="submit"] {
  cursor: pointer;
  background: $grey-300;
}

input:focus::placeholder {
  color: transparent;
}

.autocomplete-items {
  position: absolute;
  left: 0;
  top: 38px;
  font-size: 0.9em;
  line-height: 1.5;
  width: 100%;
}

.autocomplete-items div {
  padding: 10px;
  cursor: pointer;
  background: white;
  border: 1px solid $grey-100;
}

.autocomplete-items div:hover,
.autocomplete-active {
  background: $pink-400 !important;
  color: white;
}

details {
    padding: 20px;
    margin: 30px 0;
    background: lightyellow;
    border: $border-radius solid peachpuff;
    border-radius: $border-radius;
}

summary {
    cursor: pointer;
}

// Styles for small screens
@media (max-width: 920px) {
  header {
    position: static;
    width: auto;
    height: auto;
    margin: 0 auto;
  }

  .navwrapper {
    margin: 0 auto;
    display: flex;
  }

  .container {
    display: grid;
    grid-template-columns: auto;
    margin: 0 auto;
  }

  main {
    padding: 0px 10px;
  }

  .searchicon {
    display: block;
  }

  .bio span:after {
    display: none;
  }

  .biowrapper {
    margin-top: 26px;
  }

  #searchbox {
    width: 100%;
    display: none;
  }

  #searchbox:target {
    display: block;
  }

  .logo_font {
    width: 141px;
  }

  .logo {
    margin-top: 24px;
  }

  h1 {
    font-size: 1.4em;
  }

  .bio {
    width: 220px;
    // margin: auto;
    padding: 0px;
  }

  pre {
    padding: 2px;
  }
}

h2,
h3,
h4 {
  .anchor {
    float: left;
    margin-left: -28px;
    margin-top: 3px;
    fill: $grey-400;
  }

  .anchor:hover {
    fill: $grey-300;
  }

  @media (prefers-color-scheme: light) {
    .anchor {
      fill: $grey-300;
    }
    .anchor:hover {
      fill: $grey-400;
    }
  }
}

.tag-headline {
  margin-bottom: 40px;
  font-size: 150%;
}

.tags {
  font-size: 80%;
  opacity: 0.5;
  transition: $anim-duration ease-in;
  margin-bottom: 12px;
}

.tags:hover {
  opacity: 1;
}

.tag {
  padding: 4px 10px;
  margin-left: 4px;
  border-radius: 25px;
  text-decoration: none;
  font-style: italic;
  border: 1px solid $grey-500;
  background: $grey-200;
  transition: $anim-duration ease-in;
}

.post-meta .tag {
  font-size: 70%;
  opacity: 0.7;
  vertical-align: middle;
}

.post-meta a {
  text-decoration-color: initial;
  text-decoration-thickness: inherit;
}

@media (prefers-color-scheme: light) {
  .logo_font_dark {
    display: none;
  }
}

@media (prefers-color-scheme: dark) {
  .logo_font_light {
    display: none;
  }
}

@media (prefers-color-scheme: dark) {
  body {
    background: $blue-500;
    color: white;
    border-top: 0.5em solid $pink-400;
  }

  .bio,
  .post-meta {
    color: $grey-300;
  }

  a {
    color: white;
    text-decoration-color: $pink-400;
  }

  a:hover {
    text-decoration-color: white;
  }

  .icon {
    filter: brightness(0) invert(1);
  }

  table a {
    border: none;
  }

  th,
  td {
    border-bottom: 1px solid #ddd;
  }

  pre,
  code {
    -webkit-filter: invert(100%);
    filter: invert(100%);
  }

  .info, details {
    background: $blue-800;
    border-color: $grey-400;
  }

  .btn {
    background: $grey-500;
    color: white;
  }

  .autocomplete input,
  .autocomplete-items div {
    border: 0;
    background: $blue-800;
    color: white;
  }

  .tag {
    border: 1px solid white;
    background: $blue-800;
  }

  .tag:hover {
    color: white;
    background: $pink-400;
  }

  .post-meta a {
    color: white;
  }

  footer {
    background: $blue-800;
  }
}

